<resources>
    <string name="app_name">FeralFriends</string>
    <string name="test">test fragment</string>
    <string name="friend_name_hint">Enter a name for our friend.</string>
    <string name="friend_name_label">Name</string>
    <string name="friend_details_label">Please type details about the feral friends that you encounter. Perhaps tell a story about how you found them.</string>
    <string name="friend_fed_label">Fed</string>
    <string name="date_picker_title">Date when our friend was last fed</string>
    <string name="contact_name">Contact Name</string>
    <string name="friend_contact_text">Choose contact</string>
    <string name="friend_report_text">Share Feral Friend</string>
    <string name="save_friend_text">SAVE friend</string>
    <string name="cancel_friend_text">CANCEL</string>
    <string name="edit_friend_text">EDIT</string>
    <string name="friend_report">%1s!
        The friend was discovered on %2s, %3s, and %4s
        </string>
    <string name="friend_report_fed">Our friend has been fed</string>
    <string name="friend_report_hungry">Our friend is hungry;/</string>
    <string name="friend_Report_no_contact">There is no contact</string>
    <string name="friend_report_contact">The contact is %s</string>
    <string name="friend_report_subject">Feral Friend Report</string>
    <string name="send_report">Send Report</string>
    <string name="delete_friend">Delete</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit">Map</string>
    <string name="friend_tnr_label">TNR</string>
    <string name="number_of_cats">12</string>
</resources>
